ecmascript/parser/tests/test262-error-references/fail/15de970e269ae56f.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/15de970e269ae56f.js:1:1
  |
1 | (1 + 1) = 10
  | ^^^^^^^

